# final-assignment-agent

./: .env.example  .gitattributes.bak  .gitignore  Gaia agent validator.ipynb  Gaia dataset analysis.ipynb  Gaia_agent_builder.ipynb  Gaia_agent_checker.ipynb  Gaia_dataset_analysis.ipynb  Gaia_production_validator.ipynb  Gaia_validator.ipynb  README.md  agent_context.py  agent_files.py  agent_interface.py  agent_logging.py  agent_logic.py  agent_logic_2462025.py  agent_testing.py  app.py  build_vectorstore.py  dev_retriever.py  gaia_agent_prompts.json  gaia_agent_system.py  gaia_agent_system.py.old  gaia_blind_testing.py  gaia_dataset_downloader.py  gaia_dataset_utils.py  gaia_test_results_20250605_151007.json  hf_production_testing_agent_assignment.py  hybrid_gaia_agent.py  metadata.json  pyproject.toml  requirements.txt  test_agent.py  test_diagnostic_config_fix.py
RobotPai/: .gitignore  agent.py  requirements.txt  test.ipynb
docs/: Compatibility Analysis: Testing Framework vs Current Agent System.md  Gaia_agent_performance_evaluation.md  Inspiration Code Analysis: How LLM Decision-Making Actually Works.md  PRD Current GAIA Agent System deployed.md  Production Deployment Strategy: GAIA Agent Testing Framework.md  README.md  Testing Framework for GAIA Agents - blind testing.md  Testing_framework_gaia_agents_original.md  Updated Product Requirements Document: GAIA-Capable Agent for HF Agents Course Final Assignment.md  agent_logic_vision_browser_tool.md  deployment-prd.md  gaia_deployment.md  happy_path_deployment.md  logs_run_30_06_2025-2.md  logs_run_30_06_2025-3.md  logs_run_30_06_2025.md  logs_run_30_06_2025_analyzed.md
examples/RobotPai/: app.py  system_prompt.txt  test.ipynb
examples/fisherman611/: LICENSE  README.md  agent.py  app.py  code_interpreter.py  explore_metadata.ipynb  image_processing.py  requirements.txt  supabase_docs.csv  system_prompt.txt
examples/vkublytskyi/: .env.tpl  README.md  agents.py  app.py  apt.txt  requirements.txt
examples/vkublytskyi/exploration/: chess.ipynb  data_analyst.ipynb  information_retrieval.ipynb  main.ipynb  multi_agent.ipynb  speech_recognition.ipynb  youtube_exploration.ipynb
examples/vkublytskyi/exploration/data/tasks/: answers.agents_attempt_1.yaml  answers.yaml  answers_llm_only.yaml
examples/vkublytskyi/tools/: __init__.py  classifier_tool.py  google_search_tools.py  speech_recognition_tool.py
exploration/: chess.ipynb  main.ipynb  multi_agent.ipynb  speech_recognition.ipynb
exploration/data/tasks/: tasks.yaml
gaia-deploy/: .gitignore  DEPLOYMENT_NOTES.md  README.md  app.py  gaia_embeddings.csv  metadata.jsonl  requirements.txt
tests/: Testing_framework_gaia_agents.md  check_tools.py  debug_file_processing.py  debug_metadata.py  gaia_data  hf_api_test_script.py  hf_auth_debug.py  import_chain_debug.py  integration_test_gaia_question.py  test_agent_context.py  test_browser_dependencies.py  test_browser_profile_tool.py  test_browser_setup.py  test_comprehensive.py  test_content_retriever.py  test_fix_context.py  test_gaia_agent.py  test_github_local_authentication.py  test_local_authentication.py  test_smolag_logging.py  test_vision_browser_tool.py  test_youtube_tool.py
tools/: BrowserProfileTool.py  __init__.py  chess_tools.py  content_grounding_tool.py  content_retriever_tool.py  get_attachment_tool.py  langchain_tools.py  vision_browser_tool.py  youtube_content_tool.py  youtube_video_tool.py
